--- a/projetos/templates/projeto.html
+++ b/projetos/templates/projeto.html
@@ -1,3 +1,5 @@
+<a href="{% url 'index' %}">Home</a>
+
 {% if projeto %}
     <h1>{{ projeto.titulo }}</h1>
     Abreviacao : {{ projeto.abreviacao }} <BR>
