atualizacoes para sessoes de usuarios

--- a/projetos/templates/index.html
+++ b/projetos/templates/index.html
@@ -34,5 +34,15 @@
 
 </form>
 
+<h2>Dynamic content</h2>
+
+<p>PFE tem os seguintes registros:</p>
+<ul>
+  <li><strong>Projetos:</strong> {{ num_projetos }}</li>
+</ul>
+
+<p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
+
+
 </body>
 </html>
