--- a/projetos/templates/projetos/projeto_list_user.html
+++ b/projetos/templates/projetos/projeto_list_user.html
@@ -1,20 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Borrowed books</h1>
-
+    <h1>Projetos do Usuario</h1>
+    
+    {% if perms.projetos.altera_empresa %}
+    PODE VER
+    {% else %}
+     NAO PODE VER
+    {% endif %}
+    
     {% if projeto_list %}
     <ul>
-
-      {% for proj in projeto_list %} 
+      Empresas
+      {% for projeto in projeto_list %} 
       <li class="{% if proj.disponivel %}text-danger{% endif %}">
-        <a href="{% url 'projeto' projeto.empresa.pk %}">{{projeto.empresa.nome_empresa}}</a> ({{ projeto.empresa.nome_empresa }})        
+        <a href="{% url 'projeto' %}"></a> Empresa: {{projeto.empresa.login}}</a> ({{ projeto.empresa.nome_empresa }})
       </li>
       {% endfor %}
     </ul>
 
     {% else %}
-      <p>There are no books borrowed.</p>
+      <p>There are no projects borrowed.</p>
     {% endif %}
   
 
