--- a/projetos/templates/index.html
+++ b/projetos/templates/index.html
@@ -8,7 +8,14 @@
 
 <body>
 
-<h2>Pagina inicial para o Projeto Final de Engenharia</h2>
+<h2>Pagina inicial para o Projeto Final de Engenharia!</h2>
+
+{% if user.is_authenticated %}
+  Hi {{ user.username }}!
+{% else %}
+  <p>You are not logged in</p>
+  <a href="{% url 'login' %}">login</a>
+{% endif %}
 
 <form action="{% url 'login' %}"  action="/login" method="post">
     {% csrf_token %}
