--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -3,3 +3,11 @@
     padding: 0;
     list-style: none;
 }
+
+table {
+  border-collapse: collapse;
+}
+  
+table, th, td {
+  border: 1px solid black;
+}
