--- a/projetos/templates/base.html
+++ b/projetos/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   {% block title %}<title>Projeto Final de Engenharia</title>{% endblock %}
   <meta charset="utf-8">
@@ -7,30 +7,24 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Add additional CSS in static file -->
   {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-  <img src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:125px;height:49px;">
+  <a href="{% url 'index' %}">
+    <img src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:125px;height:49px;margin-left:30px;">
+  </a>
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-2">
         {% block sidebar %}
-          <ul class="sidebar-nav">
-            <li><a href="{% url 'index' %}">Home</a></li>
-            <li><a href="">Alunos</a></li>
-            <li><a href="">Projetos</a></li>
-
-
-            
-               {% if user.is_authenticated %}
-                 <li>User: {{ user.get_username }}</li>
-                 <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
-               {% else %}
-                 <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
-               {% endif %} 
-
-
-          </ul>
+            {% if user.is_authenticated %}
+              <li>Ususário: {{ user.get_username }}</li>
+              <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+            {% else %}
+              <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+            {% endif %} 
+            <!-- Nome: {{ user.nome_completo }} <br>
+            Curso : {{ user.curso }} <br> -->
         {% endblock %}
       </div>
       <div class="col-sm-10 ">{% block content %}{% endblock %}
