Ajustes no sistema de envio de e-mail, geracao de backup csv ou xls

--- a/projetos/templates/index.html
+++ b/projetos/templates/index.html
@@ -1,7 +1,15 @@
+{% comment %}
+    Desenvolvido para o Projeto Final de Engenharia
+    Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+    Data: 15 de Maio de 2019
+{% endcomment %}
+
 {% extends "base.html" %}
 
 {% block content %}
 
-<h2>Pagina inicial para o Projeto Final de Engenharia</h2>
+<h2>Projeto Final de Engenharia</h2>
+
+<a href="{% url 'projetos' %}"><h3></h3>Selecionar Projetos</h3></a>
 
 {% endblock %}
