--- a/projetos/templates/projetos/projeto_detail.html
+++ b/projetos/templates/projetos/projeto_detail.html
@@ -1,3 +1,9 @@
+{% comment %}
+    Desenvolvido para o Projeto Final de Engenharia
+    Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+    Data: 15 de Maio de 2019
+{% endcomment %}
+
 {% extends "base.html" %}
 
 {% block content %}
@@ -10,7 +16,7 @@
   <h3>Empresa: {{ projeto.empresa }}</h3>
   <strong>endereço:</strong> {{ projeto.empresa.endereco|linebreaks }}
   <strong>website:</strong> <a href="{{ projeto.empresa.website }}"> {{ projeto.empresa.website }} </a>
-  </div>
+  <p>&nbsp;</p>
 {% endblock %}
 
   <!--
