<ExtendsNode: extends "base.html"> must be the first tag in the template.

--- a/projetos/templates/base.html
+++ b/projetos/templates/base.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+<!--
+  Desenvolvido para o Projeto Final de Engenharia
+  Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+  Data: 15 de Maio de 2019
+--><!DOCTYPE html>
 <html lang="pt-br">
 <head>
   {% block title %}<title>Projeto Final de Engenharia</title>{% endblock %}
