--- a/projetos/templates/projetos/projetos.html
+++ b/projetos/templates/projetos/projetos.html
@@ -12,20 +12,23 @@
       <form action="{% url 'selecao' %}" method="post"> {% csrf_token %}
         <table>
         {% for projeto in projeto_list %} 
-        <tr class="{% if not projeto.disponivel %}text-danger{% endif %}">
+        {% if projeto.disponivel %}
+        <tr>
           <td>&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
             {% if projeto.pk in opcoes_list %}checked{% endif %}>&nbsp;</td>
           <td>
-            
             <a href="{% url 'projeto' projeto.id %}"> {{projeto.titulo}} ({{ projeto.empresa.nome_empresa }}) </a>
           </td>
         </tr>
+        {% endif %}
         {% endfor %}
         </table>
         <p>&nbsp;</p>
 
         <input type="submit" value="Enviar">
-        Selecione pelo menos 5 projetos
+        <small><font color="red">Selecione pelo menos 5 projetos</font></small>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
       </form>
     {% else %}
       <p>Não existem projetos disponíveis.</p>
