--- a/projetos/templates/base.html
+++ b/projetos/templates/base.html
@@ -22,7 +22,7 @@
       <div class="col-sm-2">
         {% block sidebar %}
             {% if user.is_authenticated %}
-              <li>Ususário: {{ user.get_username }}</li>
+              <li>Usuário: {{ user.get_username }}</li>
               <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
             {% else %}
               <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
