--- a/projetos/templates/projetos/projetos.html
+++ b/projetos/templates/projetos/projetos.html
@@ -17,7 +17,10 @@
           <td>&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
             {% if projeto.pk in opcoes_list %}checked{% endif %}>&nbsp;</td>
           <td>
-            <a href="{% url 'projeto' projeto.id %}"> {{projeto.titulo}} ({{ projeto.empresa.nome_empresa }}) </a>
+            <a href="{% url 'projeto' projeto.id %}">
+              {{projeto.titulo}}
+              <font color="darkblue">({{ projeto.empresa.nome_empresa }})</font>
+            </a>
           </td>
         </tr>
         {% endif %}
