--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,123 @@
+{% extends "base.html" %}
+{% comment %}
+    Desenvolvido para o Projeto Final de Engenharia
+    Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+    Data: 15 de Maio de 2019
+{% endcomment %}
+
+{% block content %}
 <form method="post">
     {% csrf_token %}
-    {{ user_form.as_p }}
-    {{ profile_form.as_p }}
-    <button type="submit">Save changes</button>
+    {# aluno_form.as_p #}
+
+    <h3>Áreas de Interesse</h3>
+
+    <table>
+
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="ciencia_dos_dados" 
+            {% if user.aluno.areas.ciencia_dos_dados %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Ciência dos Dados</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="modelagem_3D" 
+            {% if user.aluno.areas.modelagem_3D %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Modelagem 3D</td>
+    </tr>      
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="manufatura" 
+            {% if user.aluno.areas.manufatura %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Manufatura</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="resistencia_dos_materiais" 
+            {% if user.aluno.areas.resistencia_dos_materiais %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Resistência dos Materiais</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="modelagem_de_sistemas" 
+            {% if user.aluno.areas.modelagem_de_sistemas %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Modelagem de Sistemas</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="controle_e_automacao" 
+            {% if user.aluno.areas.controle_e_automacao %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Controle e Automação</td>
+    </tr>      
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="termodinamica" 
+            {% if user.aluno.areas.termodinamica %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Termodinâmica</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="fluidodinamica" 
+            {% if user.aluno.areas.fluidodinamica %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Fluidodinâmica</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="eletronica_digital" 
+            {% if user.aluno.areas.eletronica_digital %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Eletrônica Digital</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="programacao" 
+            {% if user.aluno.areas.programacao %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Programação</td>
+    </tr>      
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="inteligencia_artificial" 
+            {% if user.aluno.areas.inteligencia_artificial %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Inteligência Artificial</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="computacao_em_nuvem" 
+            {% if user.aluno.areas.computacao_em_nuvem %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Computação em Nuvem</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="banco_de_dados" 
+            {% if user.aluno.areas.banco_de_dados %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Banco de Dados</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="visao_computacional" 
+            {% if user.aluno.areas.visao_computacional %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Visão Computacional</td>
+    </tr>      
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="computacao_de_alto_desempenho" 
+            {% if user.aluno.areas.computacao_de_alto_desempenho %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Computação de Alto Desempenho</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="robotica" 
+            {% if user.aluno.areas.robotica %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Robótica</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="realidade_virtual_aumentada" 
+            {% if user.aluno.areas.realidade_virtual_aumentada %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Realidade Virtual/Aumentada</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="protocolos_de_comunicacao" 
+            {% if user.aluno.areas.protocolos_de_comunicacao %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Protocolos de Comunicação</td>
+    </tr>      
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="eficiencia_energetica" 
+            {% if user.aluno.areas.eficiencia_energetica %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Eficiência Energética</td>
+    </tr>
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="administracao_economia_financas" 
+            {% if user.aluno.areas.administracao_economia_financas %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Administração, Economia e Finanças</td>
+    </tr>
+
+    </table>
+    <p>&nbsp;</p>
+
+    <button type="submit">Salvar Alterações</button>
 </form>
+{% endblock %}
