--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -119,5 +119,7 @@
     <p>&nbsp;</p>
 
     <button type="submit">Salvar Alterações</button>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
 </form>
 {% endblock %}
