--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -4,10 +4,18 @@
     list-style: none;
 }
 
+.boxed {
+  border: 1px solid green ;
+  margin: 10px;
+  background-color: lightyellow;
+  outline: 5px dashed blue;
+  outline-offset: 5px;
+}
+
 table {
   border-collapse: collapse;
 }
-  
+
 table, th, td {
   border: 1px solid black;
 }
