--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -14,6 +14,11 @@
 
     <table>
 
+    <tr><td>&nbsp;<input type="checkbox" name="selection" value="inovacao_social" 
+            {% if user.aluno.inovacao_social %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Inovação Social</td>
+    </tr>
     <tr><td>&nbsp;<input type="checkbox" name="selection" value="ciencia_dos_dados" 
             {% if user.aluno.ciencia_dos_dados %}checked{% endif %}>&nbsp;
         </td>
@@ -118,7 +123,7 @@
     </table>
     <p>&nbsp;</p>
 
-    <button type="submit">Salvar Alterações</button>
+    <button type="submit">Enviar</button>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
 </form>
