listagem de alunos e areas de interesse adicionadas

--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -9,9 +9,7 @@
 
 <h3>Projeto Final de Engenharia</h3>
 &nbsp;<br>
-<a href="{% url 'projetos' %}"><h5>Selecionar Projetos</h5></a>
-<a href="{% url 'updatep' %}"><h5>Selecionar Áreas de Interesse</h5></a>
-
-<a href="{% url 'histograma' %}"><h5>Histograma de Projetos</h5></a>
-
+<a href="{% url 'alunos' %}"><h5>Listagem de alunos</h5></a>
+<a href="{% url 'histograma' %}"><h5>Histograma de Interesse de Projetos</h5></a>
+<a href="{% url 'areas' %}"><h5>Tendência de Áreas de Interesse</h5></a>
 {% endblock %}
