--- a/users/templates/users/aluno_detail.html
+++ b/users/templates/users/aluno_detail.html
@@ -127,5 +127,7 @@
       <li>{{opcao.projeto.titulo}} ({{opcao.projeto.empresa.nome_empresa}})</li>
     </a>
   {% endfor %}
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
 
 {% endblock %}
