--- a/projetos/templates/base.html
+++ b/projetos/templates/base.html
@@ -13,32 +13,130 @@
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+  
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.mobile-container {
+  max-width: 480px;
+  margin: auto;
+  background-color: #555;
+  height: 500px;
+  color: white;
+  border-radius: 10px;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+.topnav #myLinks {
+  display: none;
+}
+
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: rgb(255, 0, 0);
+  color: white;
+}
+
+#pfe { 
+  color: rgb(50, 50, 50);
+  font-size: 17px;
+}
+
+#username { 
+  color: rgb(250, 250, 250);
+  font-size: 12px;
+  vertical-align: sub;
+  display: inline-block;
+  width: 57%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+</style>
+
+<script>
+    function myFunction() {
+      var x = document.getElementById("myLinks");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
+      }
+    }
+    </script>
+
   {% block head %}{% endblock %}
 </head>
 <body>
-  <a href="{% url 'index' %}">
-    <img src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:125px;height:49px;margin-left:25px;margin-top:8px;">
-  </a>
+    <div class="topnav">
+      <a href="{% url 'index' %}" class="active">
+        <b id="pfe">PFE</b> <img src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:59px;height:23px;">
+        {% if user.is_authenticated %}
+        &nbsp;<u id="username">[{{user.first_name}}&nbsp;{{user.last_name}}]</u>
+        {% endif %}
+      </a>
+      
+      <div id="myLinks">
+          {% if user.is_authenticated %}
+
+          <a href="{% url 'index'%}">Aluno</a>
+
+          {% if perms.user.can_view_professor %}
+          <a href="{% url 'administracao'%}">Professor</a>
+          {% endif %}
+
+          {% if perms.user.can_view_professor %}
+          <a href="{% url 'administracao'%}">Administração</a>
+          {% endif %}
+
+          <a href="{% url 'logout'%}?next={{request.path}}">Logout</a>
+
+        {% else %}
+          <a href="{% url 'login'%}?next={{request.path}}">Login</a>
+        {% endif %} 
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+  
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-2">
-        {% block sidebar %}
-            {% if user.is_authenticated %}
-              <li>Usuário: {{ user.get_username }}</li>
-              <li><a href="{% url 'index'%}">Home</a></li>
-              {% if perms.user.can_view_professor %}
-              <li><a href="{% url 'administracao'%}">Administração</a></li>
-              {% endif %}
-              <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
-            {% else %}
-              <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
-            {% endif %} 
-            &nbsp;<br>
-            <!-- Nome: {{ user.nome_completo }} <br>
-            Curso : {{ user.curso }} <br> -->
-        {% endblock %}
-      </div>
-      <div class="col-sm-10 ">{% block content %}{% endblock %}
+      <div class="col-sm-10 ">
+        
+        <br>
+        {% block content %}{% endblock %}
+        <br>
+
         {% block pagination %}
         {% if is_paginated %}
             <div class="pagination">
