--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -1,8 +1,3 @@
-.sidebar-nav {
-    margin-top: 20px;
-    padding: 0;
-    list-style: none;
-}
 
 .boxed {
   border: 1px solid green ;
@@ -18,4 +13,71 @@ table {
 
 table, th, td {
   border: 1px solid black;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.mobile-container {
+  max-width: 480px;
+  margin: auto;
+  background-color: #555;
+  height: 500px;
+  color: white;
+  border-radius: 10px;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+.topnav #myLinks {
+  display: none;
+}
+
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: rgb(255, 0, 0);
+  color: white;
+}
+
+#pfe { 
+  color: rgb(50, 50, 50);
+  font-size: 17px;
+}
+
+#username { 
+  color: rgb(250, 250, 250);
+  font-size: 12px;
+  vertical-align: sub;
+  display: inline-block;
+  width: 57%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
