--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -10,4 +10,5 @@
 <a href="{% url 'alunos' %}"><h5>Listagem de alunos</h5></a>
 <a href="{% url 'histograma' %}"><h5>Histograma de Interesse de Projetos</h5></a>
 <a href="{% url 'areas' %}"><h5>Tendência de Áreas de Interesse</h5></a>
+<a href="{% url 'organizacoes' %}"><h5>Listagem de Organicações Parceiras</h5></a>
 {% endblock %}
