--- a/projetos/templates/base.html
+++ b/projetos/templates/base.html
@@ -23,11 +23,11 @@
 </head>
 <body>
     <div class="topnav">
-      <a href="{% url 'index' %}" class="active">
-        <img src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:59px;height:23px;">
-        <b id="pfelogo">PFE</b> 
+      <a class="active">
+        <img onclick="location.href='{% url 'index'%}'" src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:59px;height:23px;">
+        <b onclick="location.href='{% url 'index'%}'" id="pfelogo">PFE</b> 
         {% if user.is_authenticated %}
-        &nbsp;<u id="username">[{{user.first_name}}&nbsp;{{user.last_name}}]</u>
+        &nbsp;<u onclick="location.href='{% url 'password_change'%}'" id="username">[{{user.first_name}}&nbsp;{{user.last_name}}]</u>
         {% endif %}
       </a>
       
@@ -44,7 +44,7 @@
           <a href="{% url 'administracao'%}">Administração</a>
           {% endif %}
 
-          <a href="{% url 'logout'%}?next={{request.path}}">Logout</a>
+          <a href="{% url 'logout'%}">Logout</a>
 
         {% else %}
           <a href="{% url 'login'%}?next={{request.path}}">Login</a>
