--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <p>Logged out!</p>  
-  <a href="{% url 'login'%}">Click here to login again.</a>
+  <p>Desconectado do sistema (Logged out)</p>  
+  <a href="{% url 'login'%}">Clique aqui para fazer o login novamente.</a>
 {% endblock %}
