--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -10,33 +10,40 @@
 <table>
     <tr>
         <td>Projetos</td>
-        <td><a href="{% url 'export' 'projetos'%}">CSV</a></td>
-        <td><a href="{% url 'exportxls' 'projetos'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'projetos' 'csv'%}">CSV</a></td>
+        <td><a href="{% url 'export' 'projetos' 'xls'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'projetos' 'json'%}">JSON</a></td>
     </tr>
     <tr>
         <td>Organizacoes</td>
-        <td><a href="{% url 'export' 'organizacoes'%}">CSV</a></td>
-        <td><a href="{% url 'exportxls' 'organizacoes'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'organizacoes' 'csv'%}">CSV</a></td>
+        <td><a href="{% url 'export' 'organizacoes' 'xls'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'organizacoes' 'json'%}">JSON</a></td>
+        
     </tr>
     <tr>
         <td>Opcoes</td>
-        <td><a href="{% url 'export' 'opcoes'%}">CSV</a></td>
-        <td><a href="{% url 'exportxls' 'opcoes'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'opcoes' 'csv'%}">CSV</a></td>
+        <td><a href="{% url 'export' 'opcoes' 'xls'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'opcoes' 'json'%}">JSON</a></td>
     </tr>
     <tr>
         <td>Usuários</td>
-        <td><a href="{% url 'export' 'usuarios'%}">CSV</a></td>
-        <td><a href="{% url 'exportxls' 'usuarios'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'usuarios' 'csv'%}">CSV</a></td>
+        <td><a href="{% url 'export' 'usuarios' 'xls'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'usuarios' 'json'%}">JSON</a></td>
     </tr>
     <tr>
         <td>Alunos</td>
-        <td><a href="{% url 'export' 'alunos'%}">CSV</a></td>
-        <td><a href="{% url 'exportxls' 'alunos'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'alunos' 'csv'%}">CSV</a></td>
+        <td><a href="{% url 'export' 'alunos' 'xls'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'alunos' 'json'%}">JSON</a></td>
     </tr>
     <tr>
         <td>Professores</td>
-        <td><a href="{% url 'export' 'professores'%}">CSV</a></td>
-        <td><a href="{% url 'exportxls' 'professores'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'professores' 'csv'%}">CSV</a></td>
+        <td><a href="{% url 'export' 'professores' 'xls'%}">XLS</a></td>
+        <td><a href="{% url 'export' 'professores' 'json'%}">JSON</a></td>
     </tr>
 </table>
 {% endblock %}
