--- a/projetos/templates/index_aluno.html
+++ b/projetos/templates/index_aluno.html
@@ -7,6 +7,7 @@
 
 {% block content %}
 &nbsp;<br>
+<a href="{% url 'perfil' %}"><h5>Perfil do Aluno</h5></a>
 <a href="{% url 'projetos' %}"><h5>Selecionar Projetos</h5></a>
-<a href="{% url 'updatep' %}"><h5>Selecionar Áreas de Interesse</h5></a>
+<a href="{% url 'areas_interesse' %}"><h5>Selecionar Áreas de Interesse</h5></a>
 {% endblock %}
