sistema de prioridade de projetos implementado

--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -62,4 +62,5 @@
 <br>
 <br>
 <a href=""><h5>Enviar para lista de e-mails</h5></a>
+<a href="{% url 'servico' %}"><h5>Habilitar aviso se manutenção</h5></a>
 {% endblock %}
