--- a/projetos/templates/projetos/projetos.html
+++ b/projetos/templates/projetos/projetos.html
@@ -5,6 +5,9 @@
     Data: 15 de Maio de 2019
 {% endcomment %}
 
+{% block head %}
+{% endblock %}
+
 {% block content %}
     {% if configuracao.ano != user.aluno.anoPFE or configuracao.semestre != user.aluno.semestrePFE %}
        <h2 class="red-bold">Você não está registrado para o PFE em {{configuracao.ano}}.{{configuracao.semestre}}</h2>
@@ -14,16 +17,34 @@
     <h3>Projetos Disponíveis</h3>
 
     {% if projeto_list %}
-      <form action="{% url 'selecao' %}" method="post"> {% csrf_token %}
+      <form action="" method="post"> {% csrf_token %}  
         <table>
         {% for projeto in projeto_list %} 
         {% if projeto.disponivel %}
         <tr>
           <!-- onclick="return false;"  para não permitir trocar -->
-          <td>&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-            {% if projeto.pk in opcoes_list %}checked{% endif %}>&nbsp;</td>
+          <!-- <td>&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+            {% if projeto.pk in opcoes_list %}checked{% endif %}>&nbsp;</td> -->
           <td>
-            <a href="{% url 'projeto' projeto.id %}">
+              <select id="selection{{projeto.pk}}" name="selection{{projeto.pk}}" ></select>
+              <script type="text/javascript">
+                var select = document.getElementById("selection{{projeto.pk}}");
+                select.options[select.options.length] = new Option("--", 0);
+                for(var index=1; index<={{projeto_list|length}}; index++){
+                  select.options[select.options.length] = new Option(index, index);
+                }
+
+                // Para agora nao encontrei forma mais inteligente de fazer isso
+                {% for opc in opcoes_list %} 
+                  {% if opc.projeto.pk == projeto.pk %}
+                  select.selectedIndex = {{ opc.prioridade }};
+                  {% endif %}
+                {% endfor %}
+
+              </script>
+            </td>
+          <td>
+            <a href="{% url 'projeto' projeto.pk %}">
               {{projeto.titulo}}
               <font color="darkblue">({{ projeto.empresa.nome_empresa }})</font>
             </a>
@@ -34,11 +55,17 @@
         </table>
         <p>&nbsp;</p>
 
+        <font color="red">
+        {{warnings|linebreaks}}
+        </font>
+
         <input type="submit" value="Enviar">
-        <small><font color="red">Selecione pelo menos 5 projetos</font></small>
+        <small><font color="red">Selecione pelo menos 5 projetos (ordenados de 1 a 5)</font></small>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
       </form>
+
+
     {% else %}
       <p>Não existem projetos disponíveis.</p>
     {% endif %}
