--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -87,3 +87,16 @@ body {
   color: red;
   font-weight: bold;
 }
+
+.green-bold {
+  color: green;
+  font-weight: bold;
+}
+
+p {
+  display: block;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-left: 0;
+  margin-right: 0;
+}
