melhor filtragem para alunos

--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -62,5 +62,6 @@
 <br>
 <br>
 <a href=""><h5>Enviar para lista de e-mails</h5></a>
+<a href="{% url 'alunos' %}"><h5>Listagem completa de alunos</h5></a>
 <a href="{% url 'servico' %}"><h5>Habilitar aviso se manutenção</h5></a>
 {% endblock %}
