--- a/users/templates/users/alunos_inscrevendo.html
+++ b/users/templates/users/alunos_inscrevendo.html
@@ -12,7 +12,7 @@
   <script type="text/javascript">
   $(window).load(function(){
     var table = $('table');
-    $('#nome_header, #curso_header, #periodo_header',)
+    $('#nome_header, #curso_header',)
         .wrapInner('<span title="ordenar coluna"/>')
         .each(function(){
             var th = $(this),
@@ -37,28 +37,26 @@
 {% endblock %}
 
 {% block content %}
-    <h3>Alunos</h3>
+    <h3>Alunos se Inscrevendo</h3>
 
-    <strong>Número Total de Alunos:</strong> {{ num_alunos }}
+    <strong>Número Total de Alunos se Inscrevendo:</strong> {{ num_alunos }}
     
     {% if alunos_list %}
         <table>
           <tr>
+              <th class="text-center">C</th>
               <th id="nome_header" class="text-center">Nome do Aluno</th>
               <th id="curso_header" class="text-center">Curso</th>
-              <th id="periodo_header" class="text-center">Periodo</th>
           </tr>
           {% for aluno in alunos_list %} 
           <tr>
+            <td class="{% if aluno.opcao_set.all.count >= 5 %}text-success{% else %}text-danger{% endif %}">&#9673; </td>
             <td><a href="{% url 'aluno' aluno.id %}">
               {{aluno.user.first_name}}&nbsp;{{aluno.user.last_name}}
             </a></td>
             <!-- class="{% if aluno.curso == 'C' %}text-success{% elif aluno.curso == 'M' %}text-danger{% else %}text-warning{% endif %}" -->
             <td>
               {{ aluno.get_curso_display }}
-            </td>
-            <td class="{% if configuracao.ano == aluno.anoPFE and configuracao.semestre == aluno.semestrePFE %}text-success{% endif %}">
-              {{aluno.anoPFE}}.{{aluno.semestrePFE}}
             </td>
           </tr>
           {% endfor %}
@@ -68,6 +66,8 @@
       <p>Não existem alunos disponíveis.</p>
     {% endif %}
     
+    <text class="text-success">&#9673;</text>Aluno já selecionou projetos [{{inscritos}}]<br>
+    <text class="text-danger">&#9673;</text>Aluno ainda precisa selecionar projetos [{{ninscritos}}]<br>
     <br>
     <strong>Quantidad Total de Alunos de Computação:</strong> {{ num_alunos_comp }} <br>
     <strong>Quantidad Total de Alunos de Mecatrônica:</strong> {{ num_alunos_mxt }} <br>
