--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -10,4 +10,5 @@
 <a href="{% url 'histograma' %}"><h5>Histograma de Interesse de Projetos</h5></a>
 <a href="{% url 'areas' %}"><h5>Tendência de Áreas de Interesse</h5></a>
 <a href="{% url 'organizacoes' %}"><h5>Listagem de Organizações Parceiras</h5></a>
+<a href="{% url 'propor' %}"><h5>Propor Grupos para Projetos</h5></a>
 {% endblock %}
