ajustes para a criacao de grupos de alunos (so um teste pois sera feito na mao)

--- a/projetos/templates/projetos/propor.html
+++ b/projetos/templates/projetos/propor.html
@@ -28,6 +28,8 @@
       {% endfor %}
     </div>
 
+    Total de projetos = {{ length }}
+
     <hr>
     <form action="" method="post"> {% csrf_token %}  
 
