--- a/users/templates/users/aluno_detail.html
+++ b/users/templates/users/aluno_detail.html
@@ -8,6 +8,7 @@
 {% block content %}
   <h3>Aluno: {{aluno.user.first_name}}&nbsp;{{aluno.user.last_name}}</h3>
   <strong>Curso:</strong> {{aluno.get_curso_display}} <br>
+  <strong>CR:</strong> {{aluno.cr}} <br>
   <strong>Áreas de interesse selecionadas:</strong>
 
   <table>
