--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -105,3 +105,11 @@ p {
   margin-left: 0;
   margin-right: 0;
 }
+
+.striped-border {
+  border: 2px dashed #000;
+  width: 100%;
+  margin: auto;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
