--- a/projetos/templates/projetos/relatorio_projetos.html
+++ b/projetos/templates/projetos/relatorio_projetos.html
@@ -6,18 +6,27 @@
 {% endcomment %}
 
 {% block head %}
+<style>
+
+  @page {
+      size: a4 portrait; /*landscape*/
+      margin: 2cm;
+  }
+
+</style>
 {% endblock %}
 
 {% block content %}
     
     <h3>Projetos Disponíveis - PFE {{configuracao.ano}}.{{configuracao.semestre}}</h3>
     <br>
+    
 
     {% if projetos %}
 
         {% for projeto in projetos %} 
         {% if projeto.disponivel %}
-
+        <div><pdf:nextpage /></div>
 
           <h4>Título: {{ projeto.titulo }}</h4>
           <strong>Descrição:</strong> {{ projeto.descricao|linebreaks }}
@@ -27,9 +36,7 @@
           <hr>
           <h5>Empresa: {{ projeto.empresa.nome_empresa }}</h5>
           <strong>endereço:</strong> {{ projeto.empresa.endereco|linebreaks }}
-          <strong>website:</strong> <a href="{{ projeto.empresa.website }}"> {{ projeto.empresa.website }} </a>
-          <p>&nbsp;</p>
-        
+          <strong>website:</strong> <a href="{{ projeto.empresa.website }}"> {{ projeto.empresa.website }} </a>        
           <hr class="striped-border">
 
         {% endif %}
