tooltip com nomes dos projetos nas listas de alunos

--- a/projetos/templates/projetos/relatorio_projetos.html
+++ b/projetos/templates/projetos/relatorio_projetos.html
@@ -7,12 +7,10 @@
 
 {% block head %}
 <style>
-
-  @page {
-      size: a4 portrait; /*landscape*/
-      margin: 2cm;
-  }
-
+    @page {
+        size: a4 portrait; /*landscape*/
+        margin: 1.5cm  1.5cm  1.5cm  1.5cm; /* top  right bottom left */
+    }
 </style>
 {% endblock %}
 
