--- a/projetos/templates/base.html
+++ b/projetos/templates/base.html
@@ -11,21 +11,32 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- botão superior direito -->
 
   {% load static %}
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <script type="text/javascript" src="{% static 'js/pfe.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">  
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 
   {% block head %}{% endblock %}
+
 </head>
 <body>
+
+    <script type="text/javascript" src="{% static 'js/pfe.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     <div class="topnav">
       <a class="active">
-        <img onclick="location.href='{% url 'index'%}'" src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:59px;height:23px;">
-        <b onclick="location.href='{% url 'index'%}'" id="pfelogo">PFE</b> 
+
+        <img onclick="location.href='{% if user.tipo_de_usuario == 1 %}{% url 'index' %}{% else %}{% url 'professor' %}{% endif %}'"
+        src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:59px;height:23px;">
+
+        <b onclick="location.href='{% if user.tipo_de_usuario == 1 %}{% url 'index' %}{% else %}{% url 'professor' %}{% endif %}'"
+        id="pfelogo">PFE</b> 
+
         {% if user.is_authenticated %}
         &nbsp;<u onclick="location.href='{% url 'perfil'%}'" id="username">[{{user.first_name}}&nbsp;{{user.last_name}}]</u>
         {% endif %}
