relatorio de projetos alocados

--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -11,4 +11,5 @@
 <a href="{% url 'areas' %}"><h5>Tendência de Áreas de Interesse</h5></a>
 <a href="{% url 'organizacoes' %}"><h5>Listagem de Organizações Parceiras</h5></a>
 <a href="{% url 'propor' %}"><h5>Propor Grupos para Projetos</h5></a>
+<a href="{% url 'fechados' %}"><h5>Resumo de Projetos Fechados</h5></a>
 {% endblock %}
