--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -80,4 +80,5 @@
 <a href=""><h5>Enviar para lista de e-mails</h5></a>
 <a href="{% url 'alunos' %}"><h5>Listagem completa de alunos</h5></a>
 <a href="{% url 'servico' %}"><h5>Habilitar aviso se manutenção</h5></a>
+<a href="{% url 'carrega_disciplinas' %}"><h5>Carrega dados (disciplinas atualmente)</h5></a>
 {% endblock %}
